# bs

./: CMakeLists.txt
praktikum02/: aufgabe_2_1.sh  aufgabe_2_2.sh
praktikum02/src/: aufgabe_2_3.sh
praktikum03/: remove.sh  restore.sh
praktikum04/src/: MiniShell.cpp  MiniShell.h  main.cpp
praktikum05/src/: MiniShell.cpp  MiniShell.h
praktikum06/Input_Blatt_6/Prosumer_Example_C++11/: prosumer.cpp
praktikum06/src/: Bot.cpp  Bot.h  Makefile  Queue.cpp  Queue.h  Steuerdatei  main.cpp
praktikum07/src/: ListDir.cpp  ListDir.h  main.cpp
praktikum08/src/: main.cpp  tar.h
